crates/toml/tests/snapshots/invalid/ext/table/newline-2.stderr
TOML parse error at line 1, column 8
  |
1 | ["table
  |        ^
unclosed table, expected `]`

---
TOML parse error at line 2, column 3
  |
2 | "]
  |   ^
key with no value, expected `=`

---
TOML parse error at line 1, column 8
  |
1 | ["table
  |        ^
invalid basic string, expected `"`

---
TOML parse error at line 2, column 3
  |
2 | "]
  |   ^
invalid basic string, expected `"`
